build z-index bug

--- a/src/less/common.less
+++ b/src/less/common.less
@@ -63,7 +63,7 @@
 	.border-radius(8px);
 	.opacity(0.3);
 	.transition(opacity);
-	z-index: 1001;
+	z-index: @z-index-drag;
 }
 
 .custom-scroll-drag:hover{
