--- a/src/less/modal.less
+++ b/src/less/modal.less
@@ -167,7 +167,9 @@
 }
 
 .w-modal-item{
+    position: relative;
     .opacity(0);
+    z-index: @z-index-mask;
 }
 
 .w-modal-wrap {
