--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -201,3 +201,4 @@
 
 @z-index-mask:                   10001;
 @z-index-loading:                10002;
+@z-index-drag:                   10000;
